--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
    <h1>Core Interaction 2019</h1> 
-    <a href="exercise/index.html"> Exercise 1</a>
+    <a href="exercise1/index.html"> Exercise 1</a>
+    <a href="exercise2/index.html"> Exercise 2</a>
+    <a href="exercise3/index.html"> Exercise 3</a>
+    <a href="exercise4/index.html"> Exercise 4</a>
+    <a href="exercise5/index.html"> Exercise 5</a>
 </body>
 </html>
