--- a/index.html
+++ b/index.html
@@ -2,16 +2,15 @@
 <html>
 <head>
     
-    <title>Nika DIomidovskaia
+    <title>Core Interractions
     </title>
     
 </head>
 <body>
-   <h1>Core Interaction 2019</h1> 
-    <a href="exercise1/index.html"> Exercise 1</a>
-    <a href="exercise2/index.html"> Exercise 2</a>
-    <a href="exercise3/index.html"> Exercise 3</a>
-    <a href="exercise4/index.html"> Exercise 4</a>
-    <a href="exercise5/index.html"> Exercise 5</a>
+   <h1>Core Interractions</h1> 
+    <a href="homepage.html"> STUDIO</a>
+   <br> <br>
+    <a href="homepage1.html"> LAB</a>
+  
 </body>
 </html>
