--- a/homepage1.html
+++ b/homepage1.html
@@ -2,13 +2,15 @@
 <html>
 <head>
     
-    <title>Core Interractions
+    <title>images
     </title>
     
 </head>
 <body>
    <h1>LAB</h1> 
    
-    <a href="inclass1/index.html">inclass1</a>
+    <a href="inclass1/index.html">inclass 1</a><br>
+    <a href="wikipedia/index.html">wikipedia </a>
 </body>
 </html>
+
