--- a/homepage.html
+++ b/homepage.html
@@ -8,10 +8,11 @@
 </head>
 <body>
    <h1>Core Interaction 2019</h1> 
-    <a href="exercise1/index.html"> Exercise 1</a>
-    <a href="exercise2/index.html"> Exercise 2</a>
-    <a href="exercise3/index.html"> Exercise 3</a>
-    <a href="exercise4/index.html"> Exercise 4</a>
-    <a href="exercise5/index.html"> Exercise 5</a>
+    <a href="exercise1/index.html"> Exercise 1</a><br>
+    <a href="exercise2/index.html"> Exercise 2</a><br>
+    <a href="exercise3/index.html"> Exercise 3</a><br>
+    <a href="exercise4/index.html"> Exercise 4</a><br>
+    <a href="exercise5/index.html"> Exercise 5</a><br>
+     <a href="readingresponces/reading1/index.html"> Reading Responces</a><br>
 </body>
 </html>
