--- a/homepage.html
+++ b/homepage.html
@@ -13,6 +13,6 @@
     <a href="exercise3/index.html"> Exercise 3</a><br>
     <a href="exercise4/index.html"> Exercise 4</a><br>
     <a href="exercise5/index.html"> Exercise 5</a><br>
-     <a href="readingresponces/reading1/index.html"> Reading Responces</a><br>
+     <a href="readingresponses/reading1/index.html"> Reading Responses</a><br>
 </body>
 </html>
