--- a/exercise2/index.html
+++ b/exercise2/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
    <h1>Exercise2</h1> 
+    <a href="Poster/index.html">  Poster Art NOUVEA</a><br>
+     <a href="Blue/index.html"> Blue</a><br>
+     <a href="Comercia/index.html"> Comercia</a><br>
+    
   
 </body>
 </html>
