--- a/homepage1.html
+++ b/homepage1.html
@@ -10,7 +10,8 @@
    <h1>LAB</h1> 
    
     <a href="inclass1/index.html">inclass 1</a><br>
-    <a href="wikipedia/index.html">wikipedia </a>
+    <a href="wikipedia/index.html">wikipedia </a><br>
+    <a href="inclass2/index.html">inclass 2 </a><br>
 </body>
 </html>
 
