--- a/homepage1.html
+++ b/homepage1.html
@@ -8,10 +8,11 @@
 </head>
 <body>
    <h1>LAB</h1> 
-   
-    <a href="inclass1/index.html">inclass 1</a><br>
     <a href="wikipedia/index.html">wikipedia </a><br>
+    <a href="inclass1/index.html">inclass 1</a><br>
     <a href="inclass2/index.html">inclass 2 </a><br>
+    <a href="labE1/index.html">exercise 1 </a><br>
+    <a href="labRR/index.html">reading responses </a><br>
 </body>
 </html>
 
