--- a/labRR/index.html
+++ b/labRR/index.html
@@ -11,7 +11,9 @@
     
      <a href="reading1/index.html"> Reading Response 1</a><br>
     
-      <a href="reading2/index.htm"> Reading Response 2</a><br>
+      <a href="reading2/index.html"> Reading Response 2</a><br>
+ 
+     <a href="reading3/index.htm"> Reading Response 3</a><br>
  
 </body>
 </html>
