--- a/homepage1.html
+++ b/homepage1.html
@@ -12,6 +12,7 @@
     <a href="inclass1/index.html">inclass 1</a><br>
     <a href="inclass2/index.html">inclass 2 </a><br>
     <a href="labE1/index.html">exercise 1 </a><br>
+    <a href="labE2/index.html">exercise 2 </a><br>
     <a href="labRR/index.html">reading responses </a><br>
 </body>
 </html>
