--- a/homepage1.html
+++ b/homepage1.html
@@ -13,6 +13,7 @@
     <a href="inclass2/index.html">inclass 2 </a><br>
     <a href="labE1/index.html">exercise 1 </a><br>
     <a href="labE2/index.html">exercise 2 </a><br>
+       <a href="labE3/index.html">exercise 3 </a><br>
     <a href="labRR/index.html">reading responses </a><br>
 </body>
 </html>
