--- a/labE2/1/index.html
+++ b/labE2/1/index.html
@@ -27,14 +27,15 @@
 }
         
         .grid-container {
-  display: grid;
+  display: flex;
+    flex-wrap: wrap;
   grid-template-columns: auto auto auto;
-  padding: 30px;
+  
 }
 img {
   border: 25px solid;
     border-color: transparent;
-  padding: 50px;
+  padding: 150px;
   
 }
         
