--- a/readingresponses/index.html
+++ b/readingresponses/index.html
@@ -16,6 +16,8 @@
     <a href="reading3/index.html"> Reading Response 3</a><br>
     
     <a href="reading4/index.html"> Reading Response 4</a><br>
+    
+    <a href="reading5/index.html"> Reading Response 5</a><br>
  
 </body>
 </html>
