--- a/readingresponses/index.html
+++ b/readingresponses/index.html
@@ -19,5 +19,6 @@
     
     <a href="reading5/index.html"> Reading Response 5</a><br>
  
+     <a href="reading6/index.html"> Reading Response 6</a><br>
 </body>
 </html>
