--- a/labRR/index.html
+++ b/labRR/index.html
@@ -13,7 +13,7 @@
     
       <a href="reading2/index.html"> Reading Response 2</a><br>
  
-     <a href="reading3/index.htm"> Reading Response 3</a><br>
+     <a href="reading3/index.html"> Reading Response 3</a><br>
     
     <a href="reading4/index.htm"> Reading Response 4</a><br>
  
