--- a/readingresponses/reading6/index.html
+++ b/readingresponses/reading6/index.html
@@ -8,14 +8,9 @@
 </head>
 <body>
    <h1>Reading Response 6</h1> 
- <br>   “In an age of information overload, a room is comforting 
- <br> because it’s finite, often with a specific intended purpose.” <br> 
- <br> -Louis Rossetto <br>  <br>  <br> 
-
-I think that in our time, the digital representation of an 
-  individual has <br>a great importance for the society. Almost everyone has Instagram this days,<br>which is a direct 
-  representation of one to the society. Web is what we make 
- <br> it, it will have the identity you give it, and you can turn
-it into anything you want.
+material design serves a purpose of unifying the design of apps for google. it is standardization of design process to make it easier and fall under one kind of language. It tries to unify styles.
+    
+    Me myself: I like the idea of a system, it simplefies the process of understanding for the user. For example the standardized iconography hints you what the app might be about. 
+    
 </body>
 </html>
