--- a/readingresponses/index.html
+++ b/readingresponses/index.html
@@ -20,5 +20,8 @@
     <a href="reading5/index.html"> Reading Response 5</a><br>
  
      <a href="reading6/index.html"> Reading Response 6</a><br>
+    
+      <a href="reading7/index.html"> Reading Response 7</a><br>
+    
 </body>
 </html>
