--- a/labRR/index.html
+++ b/labRR/index.html
@@ -15,7 +15,7 @@
  
      <a href="reading3/index.html"> Reading Response 3</a><br>
     
-    <a href="reading4/index.htm"> Reading Response 4</a><br>
+    <a href="reading4/index.html"> Reading Response 4</a><br>
  
 </body>
 </html>
