--- a/project1/index.html
+++ b/project1/index.html
@@ -1,7 +1,7 @@
 <! DOCTYPE html>
 <html>
 <head>
-    
+    <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <title>Project 1
     </title>
     <style>
