--- a/labE3/3/index.html
+++ b/labE3/3/index.html
@@ -11,6 +11,8 @@
         
         body,html {
             margin: 0;
+            background-image:url(old.jpg);
+            background-size: contain;
         }
         
         body { 
