--- a/homepage1.html
+++ b/homepage1.html
@@ -14,6 +14,8 @@
     <a href="labE1/index.html">exercise 1 </a><br>
     <a href="labE2/index.html">exercise 2 </a><br>
        <a href="labE3/index.html">exercise 3 </a><br>
+     <a href="labE4/index.html">exercise 4 </a><br>
+     <a href="labE5/index.html">exercise 5 </a><br>
     <a href="labRR/index.html">reading responses </a><br>
 </body>
 </html>
