--- a/exercise5/index.html
+++ b/exercise5/index.html
@@ -1,13 +1,74 @@
-<! DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="en" >
+
 <head>
-    
-    <title>exercise5
-    </title>
-    
-</head>
-<body>
-   <h1>Exercise5</h1> 
+  <meta charset="UTF-8">
+  <title>moving dots</title>
   
+  
+  
+      <link rel="stylesheet" href="css/style.css">
+
+  
+</head>
+
+<body>
+
+  <!-- Inspired by Yiting Liu: https://codepen.io/yitliu/pen/VdQNMJ -->
+
+<body>
+<div class="canvas">
+
+   
+  <svg height="300" width="210" class="circle" id="circle_1">
+    <circle cx="5" cy="5" r="5" stroke="none" fill="red" />
+  </svg>
+  <svg height="230" width="10" class="circle" id="circle_2">
+    <circle cx="5" cy="5" r="5" stroke="none" fill="red" />
+</svg>
+  <svg height="50" width="10" class="circle" id="circle_3">
+    <circle cx="5" cy="5" r="5" stroke="none" fill="red" />
+  </svg>
+  
+   <svg height="50" width="100" class="circle" id="circle_10">
+    <circle cx="5" cy="5" r="5" stroke="none" fill="red" />
+  </svg>
+  <svg height="50" width="10" class="circle" id="circle_20">
+    <circle cx="5" cy="5" r="5" stroke="none" fill="red" />
+</svg>
+  <svg height="50" width="10" class="circle" id="circle_30">
+    <circle cx="100" cy="5" r="5" stroke="none" fill="red" />
+  </svg>
+  <svg height="300" width="210" class="circle" id="circle_1">
+    <circle cx="5" cy="5" r="5" stroke="none" fill="red" />
+  </svg>
+  <svg height="230" width="10" class="circle" id="circle_2">
+    <circle cx="5" cy="5" r="5" stroke="none" fill="red" />
+</svg>
+  <svg height="50" width="10" class="circle" id="circle_3">
+    <circle cx="5" cy="5" r="5" stroke="none" fill="red" />
+  </svg>
+  
+   <svg height="50" width="100" class="circle" id="circle_10">
+    <circle cx="5" cy="5" r="5" stroke="none" fill="red" />
+  </svg>
+  <svg height="50" width="10" class="circle" id="circle_20">
+    <circle cx="5" cy="5" r="5" stroke="none" fill="red" />
+</svg>
+  <svg height="50" width="10" class="circle" id="circle_30">
+    <circle cx="100" cy="5" r="5" stroke="none" fill="red" />
+  </svg>
+</div>
 </body>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js'></script>
+
+  
+
+    <script  src="js/index.js"></script>
+
+
+
+
+</body>
+
 </html>
