--- a/readingresponses/index.html
+++ b/readingresponses/index.html
@@ -25,5 +25,6 @@
     
     <a href="reading8/index.html"> Reading Response 8</a><br>
     
+     <a href="reading9/index.html"> Reading Response 9</a><br>
 </body>
 </html>
