--- a/labE2/1/index.html
+++ b/labE2/1/index.html
@@ -23,6 +23,7 @@
        body {
   background-image: url("img/old.jpg");
   background-repeat: repeat;
+           background-size: contain;
 
 }
         
