--- a/homepage1.html
+++ b/homepage1.html
@@ -2,10 +2,11 @@
 <html>
 <head>
     
-    <title>images
+    <title>lab
     </title>
     
 </head>
+<body>
 <body>
    <h1>LAB</h1> 
     <a href="wikipedia/index.html">wikipedia </a><br>
@@ -17,6 +18,8 @@
      <a href="labE4/index.html">exercise 4 </a><br>
      <a href="labE5/index.html">exercise 5 </a><br>
     <a href="labRR/index.html">reading responses </a><br>
+    <a href="project/index.html">project </a><br>
+</body>
 </body>
 </html>
 
