--- a/homepage.html
+++ b/homepage.html
@@ -14,6 +14,7 @@
     <a href="exercise4/index.html"> Exercise 4</a><br>
     <a href="exercise5/index.html"> Exercise 5</a><br>
     <a href="project1/index.html"> Project 1</a><br>
+     <a href="project2/index.html"> Project 2</a><br>
      <a href="readingresponses/index.html"> Reading Responses</a><br>
 </body>
 </html>
