--- a/index.html
+++ b/index.html
@@ -1,16 +1,26 @@
-<! DOCTYPE html>
-<html>
+<html lang=”en”>
 <head>
-    
-    <title>Core Interractions
-    </title>
-    
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Name of your awesome camera app -->
+    <title>Camera App</title>
+    <!-- Link to your main style sheet-->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <h1>Core Interractions</h1> 
-    <a href="homepage.html"> STUDIO</a>
-   <br> <br>
-    <a href="homepage1.html"> LAB</a>
-  
+    <!-- Camera -->
+    <main id="camera">
+        <!-- Camera sensor -->
+        <canvas id="camera--sensor"></canvas>
+        <!-- Camera view -->
+        <video id="camera--view" autoplay playsinline></video>
+        <!-- Camera output -->
+        <img src="//:0" alt="" id="camera--output">
+        <!-- Camera trigger -->
+        <button id="camera--trigger">Take a picture</button>
+    </main>
+    <!-- Reference to your JavaScript file -->
+    <script src="app.js"></script>
 </body>
 </html>
