--- a/readingresponses/reading12/index.html
+++ b/readingresponses/reading12/index.html
@@ -8,7 +8,13 @@
 </head>
 <body>
    <h1>Reading Response 12</h1> 
- 
+ In Designer as Author I argued that we are insecure about the value of our work. We are
+envious of the power, social position and cachet that artists and authors seem to
+command. By declaring ourselves "designer/authors" we hope to garner similar respect.
+Our deep-seated anxiety has motivated a movement in design that values origination of
+content over manipulation of content. <br><br>
+    -The misconception is that without deep content, design
+is reduced to pure style, a bag of dubious tricks
     
 </body>
 </html>
