--- a/project2/index.html
+++ b/project2/index.html
@@ -1,5 +1,6 @@
 <html lang=”en”>
 <head>
+    
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,6 +8,7 @@
     <title>Camera App</title>
     <!-- Link to your main style sheet-->
     <link rel="stylesheet" href="style.css">
+   <link href="favicon.ico" rel="shortcut icon" type="image/x-icon"/>
 </head>
 <body>
     <!-- Camera -->
