--- a/project/index.html
+++ b/project/index.html
@@ -36,7 +36,7 @@
   </div>
  
   <div class="page">
-     <a href="pages/index.html"> <img src="22%20copy.png" width="300px" height="400px"/> </a>
+     <a href="pages/index.html"> <br><br><img src="22%20copy.png" width="300px" height="400px"/> </a>
      
     <p></p>
     <p></p>
