--- a/project2/index.html
+++ b/project2/index.html
@@ -27,7 +27,8 @@
     <script src="app.js"></script>
     
     <div id="one"></div>
- <div id="two"></div>   
+ <div id="two"></div>  
+      <div id="three"></div>
      <div id="four"></div> 
      <div id="five"></div> 
     
