--- a/project2/index.html
+++ b/project2/index.html
@@ -20,7 +20,7 @@
         <!-- Camera output -->
         <img src="//:0" alt="" id="camera--output">
         <!-- Camera trigger -->
-        <button id="camera--trigger">Take a picture</button>
+        <button id="camera--trigger"></button>
     </main>
     <!-- Reference to your JavaScript file -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
