--- a/project2/index.html
+++ b/project2/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Name of your awesome camera app -->
-    <title>Camera App</title>
+    <title>on crack</title>
     <!-- Link to your main style sheet-->
     <link rel="stylesheet" href="style.css">
    <link href="favicon.ico" rel="shortcut icon" type="image/x-icon"/>
